User apis code refactored to use robust error handling and used docstrings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,9 @@
 profile = "black"
 line_length = 120
 known_third_party = ["django", "flask"]
+skip_glob = ["**/migrations/*"]
 
 [tool.ruff]
 line-length = 120
 select = ["E", "F", "W"]
+exclude = ["**/migrations/*"]
