--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ constantly==23.10.4
 cryptography==43.0.0
 daphne==4.1.2
 distlib==0.3.8
-Django==5.1
+Django
 django-anymail==11.1
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
